--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link src="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-
+    <h1>Broadway Design<h1>
+      <nav>
+        <a href="./home.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./work.html">Work</a>
+        <a href="./team.html">Team</a>
+        <a href="./contact.html">Contact</a>
+      </nav>
   </body>
 </html>
