--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link src="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
+
+    <!-- Broadway design + Nav -->
     <h1>Broadway Design<h1>
       <nav>
         <a href="./home.html">Home</a>
@@ -13,5 +15,24 @@
         <a href="./team.html">Team</a>
         <a href="./contact.html">Contact</a>
       </nav>
+
+    <!-- Our Process -->
+    <div class="process">
+      <h2>Our Process</h2>
+
+        <img src="./resources/images/identify.svg"/>
+        <h3>Identity</h3>
+          <p>We focus on the most important details.</p>
+
+        <img src="./resources/images/understand.svg"/>
+        <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
+
+        <img src="./resources/images/execute.svg"/>
+        <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+
+    </div>
+
   </body>
 </html>
