--- a/index.html
+++ b/index.html
@@ -16,23 +16,50 @@
         <a href="./contact.html">Contact</a>
       </nav>
 
-    <!-- Our Process -->
     <div class="process">
       <h2>Our Process</h2>
 
-        <img src="./resources/images/identify.svg"/>
-        <h3>Identity</h3>
+        <div class="identify">
+          <img src="./resources/images/identify.svg"/>
+          <h3>Identity</h3>
           <p>We focus on the most important details.</p>
+        </div>
 
-        <img src="./resources/images/understand.svg"/>
-        <h3>Understand</h3>
+        <div class="understand">
+          <img src="./resources/images/understand.svg"/>
+          <h3>Understand</h3>
           <p>We study our projects inside and out.</p>
+        </div>
 
-        <img src="./resources/images/execute.svg"/>
-        <h3>Execute</h3>
+        <div class="execute">
+          <img src="./resources/images/execute.svg"/>
+          <h3>Execute</h3>
           <p>We put everything we have into our work.</p>
+        </div>
+
+        <div class="designed">
+          <h3>Designed in New York</h3>
+        </div>
+
+        <div class="portfolio">
+          <h3>Portfolio</h3>
+          <p>Coming Soon</p>
+        </div>
+
+        <div class="team">
+          <h3>Team</h3>
+          <p>We're Hiring!</p>
+        </div>
+
+        <div class="contact">
+          <h3>Contact</h3>
+          <p>Phone: (555)-555-5555</p>
+          <p>E-mail: test@example.com</p>
+          <p>Twitter: @test</p>
+        </div>
 
     </div>
+
 
   </body>
 </html>
