--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
           <p>Twitter: @test</p>
         </div>
 
+        <div class="bottom-line"
+          <p id="copyright">© Broadway 2017</p><a href="./home.html">Home</a><a
+          href="./about.html">About</a><a href="./work.html">Work</a><a
+          href="./team.html">Team</a><a href="./contact.html">Contact</a>
+        </div>
+
     </div>
 
 
