--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <!-- Broadway design + Nav -->
     <h1>Broadway Design<h1>
       <nav>
-        <a href="./home.html">Home</a>
-        <a href="./about.html">About</a>
-        <a href="./work.html">Work</a>
-        <a href="./team.html">Team</a>
-        <a href="./contact.html">Contact</a>
+        <p><a href="./home.html">Home</a></p>
+        <p><a href="./about.html">About</a></p>
+        <p><a href="./work.html">Work</a></p>
+        <p><a href="./team.html">Team</a></p>
+        <p><a href="./contact.html">Contact</a></p>
       </nav>
 
     <div class="process">
@@ -58,10 +58,14 @@
           <p>Twitter: @test</p>
         </div>
 
-        <div class="bottom-line"
-          <p id="copyright">© Broadway 2017</p><a href="./home.html">Home</a><a
-          href="./about.html">About</a><a href="./work.html">Work</a><a
-          href="./team.html">Team</a><a href="./contact.html">Contact</a>
+        <div class="footer">
+          <p id="copyright">© Broadway 2017
+            <a href="./home.html">Home</a>
+            <a href="./about.html">About</a>
+            <a href="./work.html">Work</a>
+            <a href="./team.html">Team</a>
+            <a href="./contact.html">Contact</a>
+          </p>
         </div>
 
     </div>
