update index & styled header

--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html>
   <head>
     <title>Broadway Design</title>
-    <link src="./resources/css/style.css" type="text/css" rel="stylesheet"/>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
 
     <!-- Broadway design + Nav -->
-    <h1>Broadway Design<h1>
-      <nav>
-        <p><a href="./home.html">Home</a></p>
-        <p><a href="./about.html">About</a></p>
-        <p><a href="./work.html">Work</a></p>
-        <p><a href="./team.html">Team</a></p>
-        <p><a href="./contact.html">Contact</a></p>
-      </nav>
+    <div class="top white">
+      <h1>Broadway Design<h1>
+        <nav>
+          <p><a href="./home.html">Home</a></p>
+          <p><a href="./about.html">About</a></p>
+          <p><a href="./work.html">Work</a></p>
+          <p><a href="./team.html">Team</a></p>
+          <p><a href="./contact.html">Contact</a></p>
+        </nav>
+    </div>
 
     <div class="process">
       <h2>Our Process</h2>
@@ -37,7 +39,7 @@
           <p>We put everything we have into our work.</p>
         </div>
 
-        <div class="designed">
+        <div class="designed white">
           <h3>Designed in New York</h3>
         </div>
 
@@ -58,7 +60,7 @@
           <p>Twitter: @test</p>
         </div>
 
-        <div class="footer">
+        <div class="footer white">
           <p id="copyright">© Broadway 2017
             <a href="./home.html">Home</a>
             <a href="./about.html">About</a>
