--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
 
     <!-- Broadway design + Nav -->
-    <div class="top white">
-      <h1>Broadway Design<h1>
+    <div id="flatiron" class="top white">
+      <h1 class="bold">Broadway Design<h1>
         <nav>
           <p><a href="./home.html">Home</a></p>
           <p><a href="./about.html">About</a></p>
@@ -19,42 +19,42 @@
     </div>
 
     <div class="process">
-      <h2>Our Process</h2>
+      <h2 class="bold">Our Process</h2>
 
         <div class="identify">
           <img src="./resources/images/identify.svg"/>
-          <h3>Identity</h3>
+          <h3 class="bold">Identity</h3>
           <p>We focus on the most important details.</p>
         </div>
 
         <div class="understand">
           <img src="./resources/images/understand.svg"/>
-          <h3>Understand</h3>
+          <h3 class="bold">Understand</h3>
           <p>We study our projects inside and out.</p>
         </div>
 
         <div class="execute">
           <img src="./resources/images/execute.svg"/>
-          <h3>Execute</h3>
+          <h3 class="bold">Execute</h3>
           <p>We put everything we have into our work.</p>
         </div>
 
-        <div class="designed white">
-          <h3>Designed in New York</h3>
+        <div id="flatiron" class="designed white">
+          <h3 class="bold">Designed in New York</h3>
         </div>
 
         <div class="portfolio">
-          <h3>Portfolio</h3>
+          <h3 class="bold">Portfolio</h3>
           <p>Coming Soon</p>
         </div>
 
         <div class="team">
-          <h3>Team</h3>
+          <h3 class="bold">Team</h3>
           <p>We're Hiring!</p>
         </div>
 
         <div class="contact">
-          <h3>Contact</h3>
+          <h3 class="bold">Contact</h3>
           <p>Phone: (555)-555-5555</p>
           <p>E-mail: test@example.com</p>
           <p>Twitter: @test</p>
